# quota-sentinel

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BOOTSTRAP_PROMPT.md  CLAUDE.md  Dockerfile  Dockerfile.e2e  PROJECT_SPEC.md  RALPH_STATUS.md  README.md  ROADMAP.md  opencode.json  pyproject.toml  start-ralph.sh  tests_e2e.py
.claude/: settings.json
.claude/commands/: build.md  devops.md  docs.md  explorer.md  plan.md  pm.md  ralph.md  refactor.md  reviewer.md  security.md  sre.md  test.md
.claude/rules/: python.md  security.md  testing.md
.github/workflows/: ci.yml
.opencode/commands/: ralph.md
prompts/: build.txt  devops.txt  docs.txt  explorer.txt  plan.txt  pm.txt  ralph.txt  refactor.txt  reviewer.txt  security.txt  sre.txt  test.txt
quota_sentinel/: __init__.py  __main__.py  allocator.py  calibration.py  cli.py  config.py  daemon.py  docs.py  engine.py  opencode_db.py  server.py  store.py  switcher.py
quota_sentinel/providers/: __init__.py  alibaba.py  base.py  cerebras.py  claude.py  copilot.py  crofai.py  deepseek.py  errors.py  http.py  minimax.py  openai.py  opencode.py  zai.py
tests/: __init__.py  conftest.py  test_allocator.py  test_calibration.py  test_config.py  test_daemon.py  test_engine.py  test_errors.py  test_http.py  test_opencode_db.py  test_projects_consumption.py  test_providers.py  test_server.py  test_server_extended.py  test_store.py
watchdog/: config.json  watchdog.py
