[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quota-sentinel"
version = "0.1.0"
description = "Centralized AI provider quota monitoring daemon"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "click>=8.1",
]

[project.scripts]
quota-sentinel = "quota_sentinel.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
